# Math-dsl-compiler

./: .gitignore  CMakeLists.txt  README.md  ast.dot
cli/: CMakeLists.txt  main.cpp
compiler/: CMakeLists.txt
compiler/include/: ast.h  ast_printer.h  common.h  interpreter.h  ir.h  ir_gen.h  lexer.h  optimizer.h  parser.h  semantic_analyzer.h  symbol_table.h  visualize.h
compiler/src/: ast.cpp  ast_printer.cpp  interpreter.cpp  ir_gen.cpp  lexer.cpp  optimizer.cpp  parser.cpp  semantic_analyzer.cpp  visualize.cpp
gui/: CMakeLists.txt  main_gui.cpp
include/: ast.h  common.h  lexer.h  parser.h  visualize.h
src/: ast.c  lexer.c  main.c  parser.c  visualize.c
tests/: sample.mdsl  test.dsl  test_errors.dsl  test_power.dsl
